# ch-architecture-best-practices

./: README.md
infra_app_code/: Makefile  app.py  pyproject.toml
infra_app_code/app/: Dockerfile  pyproject.toml
infra_app_code/app/lambda/: main.py
infra_app_code/infra/: stack.py
multi_accounts/: app.py  pyproject.toml  stack.py
sharing_constructs/: Makefile  app.py  cdk.json  pyproject.toml  stack.py
sharing_constructs/org_s3/: __init__.py  bucket.py  exceptions.py
sharing_resources/: app.py  bad_stack.py  pyproject.toml  stack.py
